--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- <script src="/../js/app.js"></script> -->
         <script src="/app.js"></script>
         <!-- <link href="/css/styles.css" rel="stylesheet"> -->
-        <link href="/../css/styles.css" rel="stylesheet">
+        <link href="/styles.css" rel="stylesheet">
         <title>Brendin Swanepoel - Homepage</title>
     </head>
 
