--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <!-- <script src="/../js/app.js"></script> -->
     <script src="/app.js"></script>
     <!-- <link href="/../css/styles.css" rel="stylesheet"> -->
-    <link href="/../css/styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
     <title>Brendin Swanepoel - Portfolio</title>
 </head>
 
