--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-bg fixed-top">
             <!-- <a class="navbar-brand ml-4" href="/pages/index.html"> -->
             <a class="navbar-brand ml-4" href="/index.html">
-                <!-- <img src="/images/myLogo.png" width="60" height="60" alt=""> -->
-                <img src="/images/myLogo.png" width="60" height="60" alt="">
+                <img src="/myLogo.png" width="60" height="60" alt="">
             </a>
             <button class="navbar-toggler collapsed custom-toggler d-flex d-lg-none flex-column justify-content-around mr-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="toggler-icon top-bar"></span>
@@ -28,18 +27,15 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav txt-sz-1 mr-8">
                     <li class="nav-item ml-4">
-                        <!-- <a class="nav-link txt-s-white" href="/pages/about.html">ABOUT</a> -->
                         <a class="nav-link txt-s-white" href="/about.html">ABOUT</a>
                     </li>
                     <li class="nav-item ml-4">
-                        <!-- <a class="nav-link txt-s-white" href="/pages/portfolio.html">PORTFOLIO</a> -->
                         <a class="nav-link txt-s-white" href="/portfolio.html">PORTFOLIO</a>
                     </li>
                     <li class="nav-item ml-4">
                         <a class="nav-link txt-s-white" href="#">BLOG #</a>
                     </li>
                     <li class="nav-item ml-4">
-                        <!-- <a class="nav-link txt-s-white" href="/pages/contact.html">CONTACT</a> -->
                         <a class="nav-link txt-s-white" href="/contact.html">CONTACT</a>
                     </li>
                 </ul>
@@ -59,13 +55,13 @@
                     <hr class="mt-4">
                     <div class="mt-4 px-0">
                         <a href="#">
-                            <img src="/images/gmail-icon.png" alt="gmail link" class="social-icon mx-2">
+                            <img src="/gmail-icon.png" alt="gmail link" class="social-icon mx-2">
                         </a>
                         <a href="#">
-                            <img src="/images/linkedin-icon.png" alt="linkedin link" class="social-icon mx-2">
+                            <img src="/linkedin-icon.png" alt="linkedin link" class="social-icon mx-2">
                         </a>
                         <a href="#">
-                            <img src="/images/github-icon.png" alt="github link" class="social-icon mx-2">
+                            <img src="/github-icon.png" alt="github link" class="social-icon mx-2">
                         </a>
                     </div>
                     <p class="txt-sz-2 mt-4 mb-0">
