--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <!-- <script src="/../js/app.js"></script> -->
     <script src="/app.js"></script>
-    <!-- <link href="/../css/styles.css" rel="stylesheet"> -->
     <link href="/styles.css" rel="stylesheet">
     <title>Brendin Swanepoel - Portfolio</title>
 </head>
@@ -19,10 +17,8 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-bg">
-        <!-- <a class="navbar-brand ml-4" href="/pages/index.html"> -->
         <a class="navbar-brand ml-4" href="/index.html">
-            <!-- <img src="/images/myLogo.png" width="60" height="60" alt=""> -->
-            <img src="/images/myLogo.png" width="60" height="60" alt="">
+            <img src="/myLogo.png" width="60" height="60" alt="">
         </a>
         <button class="navbar-toggler collapsed custom-toggler d-flex d-lg-none flex-column justify-content-around mr-4"
             type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
@@ -34,18 +30,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav txt-sz-1 mr-8">
                 <li class="nav-item ml-4">
-                    <!-- <a class="nav-link txt-s-white" href="/pages/about.html">ABOUT</a> -->
                     <a class="nav-link txt-s-white" href="/about.html">ABOUT</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <!-- <a class="nav-link txt-s-white" href="/pages/portfolio.html">PORTFOLIO</a> -->
                     <a class="nav-link txt-s-white" href="/portfolio.html">PORTFOLIO</a>
                 </li>
                 <li class="nav-item ml-4">
                     <a class="nav-link txt-s-white" href="#">BLOG #</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <!-- <a class="nav-link txt-s-white" href="/pages/contact.html">CONTACT</a> -->
                     <a class="nav-link txt-s-white" href="/contact.html">CONTACT</a>
                 </li>
             </ul>
@@ -62,7 +55,7 @@
         <div class="row row-cols-md-3 row-cols-1 mt-8">
             <div class="col mb-4">
                 <div class="card">
-                    <img src="/images/portfolio-trivia.jpg" class="card-img" alt="link to trivia portfolio project">
+                    <img src="/portfolio-trivia.jpg" class="card-img" alt="link to trivia portfolio project">
                     <div class="card-img-overlay d-flex align-items-center hover-overlay">
                         <div class="txt-container mx-auto">
                             <h5 class="card-title fs-1 txt-underline txt-color-primary">Trivia</h5>
@@ -73,7 +66,7 @@
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <img src="/images/portfolio-project.jpg" class="card-img" alt="link to final portfolio project">
+                    <img src="/portfolio-project.jpg" class="card-img" alt="link to final portfolio project">
                     <div class="card-img-overlay d-flex align-items-center hover-overlay">
                         <div class="txt-container mx-auto">
                             <h5 class="card-title fs-1 txt-underline txt-color-primary">Final Project</h5>
@@ -84,7 +77,7 @@
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <img src="/images/portfolio-motomate.png" class="card-img"
+                    <img src="/portfolio-motomate.png" class="card-img"
                         alt="link to moto mate portfolio project">
                     <div class="card-img-overlay d-flex align-items-center hover-overlay">
                         <div class="txt-container mx-auto">
