--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <script src="/app.js"></script>
-        <link href="/styles.css" rel="stylesheet">
+        <script src="js/app.js"></script>
+        <link href="css/styles.css" rel="stylesheet">
         <title>Brendin Swanepoel - Homepage</title>
     </head>
 
@@ -14,7 +14,7 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-bg fixed-top">
             <a class="navbar-brand ml-4" href="/index.html">
-                <img src="/myLogo.png" width="60" height="60" alt="">
+                <img src="images/myLogo.png" width="60" height="60" alt="">
             </a>
             <button class="navbar-toggler collapsed custom-toggler d-flex d-lg-none flex-column justify-content-around mr-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="toggler-icon top-bar"></span>
@@ -52,13 +52,13 @@
                     <hr class="mt-4">
                     <div class="mt-4 px-0">
                         <a href="#">
-                            <img src="/gmail-icon.png" alt="gmail link" class="social-icon mx-2">
+                            <img src="images/gmail-icon.png" alt="gmail link" class="social-icon mx-2">
                         </a>
                         <a href="#">
-                            <img src="/linkedin-icon.png" alt="linkedin link" class="social-icon mx-2">
+                            <img src="images/linkedin-icon.png" alt="linkedin link" class="social-icon mx-2">
                         </a>
                         <a href="#">
-                            <img src="/github-icon.png" alt="github link" class="social-icon mx-2">
+                            <img src="images/github-icon.png" alt="github link" class="social-icon mx-2">
                         </a>
                     </div>
                     <p class="txt-sz-2 mt-4 mb-0">
