--- a/about.html
+++ b/about.html
@@ -4,10 +4,8 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <!-- <script src="/../js/app.js"></script> -->
-        <script src="/app.js"></script>
-        <!-- <link href="/../css/styles.css" rel="stylesheet"> -->
-        <link href="/styles.css" rel="stylesheet">
+        <script src="js/app.js"></script>
+        <link href="css/styles.css" rel="stylesheet">
         <title>Brendin Swanepoel - About</title>
     </head>
 
@@ -17,7 +15,6 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-bg">
             <!-- <a class="navbar-brand ml-4" href="/pages/index.html"> -->
             <a class="navbar-brand ml-4" href="/index.html">
-                <!-- <img src="/images/myLogo.png" width="60" height="60" alt=""> -->
                 <img src="/images/myLogo.png" width="60" height="60" alt="">
             </a>
             <button class="navbar-toggler collapsed custom-toggler d-flex d-lg-none flex-column justify-content-around mr-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
